History of feedfeeder
=====================

2.0.3 (unreleased)
------------------

- Nothing changed yet.


2.0.2 (2010-12-17)
------------------

- Modified import RSS and added a new field on feed items named 
  objectInfo. All feed data will be stored on this field, 
  as a python dict.
  Just changing the remote RSS template, you will able to memoize 
  additional info without having to modify the feed item schema.
  [dmoro]

- Added an option on feed folder that let you choose to redirect 
  automatically to remote resources. If you have modify permissions 
  on feed items there will not be any redirect
  [dmoro]

- Added new tests
  [sithmel]


2.0.1 (2010-11-26)
------------------

- Added @@feed-mega-update view so you can update all feed folders at
  once, for example in a clock server.
  [miohtoma]

- Import HTMLParseError from the standard python HTMLParser instead of
  BeautifulSoup.  This makes feedfeeder compatible with BeautifulSoup
  3.0.x again.
  [maurits]


2.0 (2010-07-05)
----------------

- Solve some Plone 4 compatibility issues.
  [sureshvv]

- Ignore unidentifiable entries without id or link, instead of
  throwing an AttributeError.
  Fixes http://plone.org/products/feedfeeder/issues/26
  [maurits]


1.0.1 (2010-04-02)
------------------

- Fix errors when viewing a folder or item on Plone 4, while still
  keeping Plone 2.5 and Plone 3 compatibility.
  Refs http://plone.org/products/feedfeeder/issues/25
  [maurits]


1.0 (2009-12-23)
----------------

- Some summaries are a snippet from the full content, and then they
  can contain broken html; in this case we are now saving the raw
  broken html, parsing it only when possible.
  [lucmult]


1.0rc7 (2009-11-06)
-------------------

- Improved the translations stuffs
  [lucmult]

- Changed the way to translate xml/html entities from summary, now 
  using BeautifulSoup. Old way was breaking with some non ascii 
  characters.
  [lucmult]
