@@ -16,67 +16,69 @@
 
       <h1 tal:content="structure context/title_or_id"></h1>
 
-      <div class="documentByLine">
-        <img src="" alt=""
-             title="This document is locked."
-             tal:define="locked portal/lock_icon.gif;"
-             tal:condition="isLocked"
-             tal:replace="structure python:locked.tag(title='Locked')"
-             i18n:attributes="title label_document_locked;"
-             />
+      <tal:show_doc_byline tal:condition="view/show_doc_byline">
+        <div class="documentByLine">
+          <img src="" alt=""
+               title="This document is locked."
+               tal:define="locked portal/lock_icon.gif;"
+               tal:condition="isLocked"
+               tal:replace="structure python:locked.tag(title='Locked')"
+               i18n:attributes="title label_document_locked;"
+               />
 
-        <tal:name tal:condition="creator">
-          <span i18n:domain="plone" i18n:translate="label_by_author">
-            by
-            <span i18n:name="author" tal:content="context/getFeedItemAuthor"></span>
+          <tal:name tal:condition="creator">
+            <span i18n:domain="plone" i18n:translate="label_by_author">
+              by
+              <span i18n:name="author" tal:content="context/getFeedItemAuthor"></span>
+            </span>
+
+            &mdash;
+
+          </tal:name>
+
+          <span i18n:translate="box_last_modified">
+            last modified
+          </span>
+          <span tal:replace="python:toLocalizedTime(context.getFeedItemUpdated(),long_format=0)">
+            August 16, 2001
           </span>
 
-          &mdash;
-
-        </tal:name>
-
-        <span i18n:translate="box_last_modified">
-          last modified
-        </span>
-        <span tal:replace="python:toLocalizedTime(context.getFeedItemUpdated(),long_format=0)">
-          August 16, 2001
-        </span>
-
-        <span class="state-expired"
-              tal:condition="python:portal.isExpired(here)"
-              i18n:translate="time_expired">
-          &mdash; expired
-        </span>
-
-        <span tal:define="locked portal/lock_icon.gif"
-              tal:condition="isLocked">
-          <img src=""
-               tal:replace="structure python:locked.tag(title='This item is locked')"
-               alt="Object locked"
-               i18n:attributes="alt label_object_locked;" />
-        </span>
-
-        <div tal:condition="here/Contributors"
-             i18n:translate="text_contributors">
-          Contributors:
-          <span i18n:name="name"
-                tal:omit-tag=""
-                tal:content="python: ', '.join(here.Contributors())">
-            Mary
+          <span class="state-expired"
+                tal:condition="python:portal.isExpired(here)"
+                i18n:translate="time_expired">
+            &mdash; expired
           </span>
-        </div>
 
-        <tal:rights condition="here/Rights">
-          <div tal:replace="here/Rights">
-            Copyleft NiceCorp Inc.
+          <span tal:define="locked portal/lock_icon.gif"
+                tal:condition="isLocked">
+            <img src=""
+                 tal:replace="structure python:locked.tag(title='This item is locked')"
+                 alt="Object locked"
+                 i18n:attributes="alt label_object_locked;" />
+          </span>
+
+          <div tal:condition="here/Contributors"
+               i18n:translate="text_contributors">
+            Contributors:
+            <span i18n:name="name"
+                  tal:omit-tag=""
+                  tal:content="python: ', '.join(here.Contributors())">
+              Mary
+            </span>
           </div>
-        </tal:rights>
 
-        <tal:history condition="nocall:context/review_history|nothing">
-          <span metal:use-macro="context/review_history/macros/review_history" />
-        </tal:history>
+          <tal:rights condition="here/Rights">
+            <div tal:replace="here/Rights">
+              Copyleft NiceCorp Inc.
+            </div>
+          </tal:rights>
 
-      </div>
+          <tal:history condition="nocall:context/review_history|nothing">
+            <span metal:use-macro="context/review_history/macros/review_history" />
+          </tal:history>
+
+        </div>
+      </tal:show_doc_byline>
 
       <p class="documentDescription"
          tal:content="structure context/Description"
